# pycodeutils

./: LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml  test.yml
pycodeutils/: __init__.py  console.py  core.py  utils.py
tests/: test_core.py
