[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pycodeutils"
version = "0.0.1"
description = "Utilities for coding challenges."
authors = ["TheRealVizard <vizard@divineslns.com>"]
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["utilities","coding", "challenges"]
packages = [{include = "pycodeutils"}]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
homepage = "https://github.com/TheRealVizard/pycodeutils"
repository = "https://github.com/TheRealVizard/pycodeutils"


[tool.poetry.dependencies]
python = ">=3.7,<4"
parse = "^1.19.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/TheRealVizard/pycodeutils/issues"

[tool.poetry.group.develop.dependencies]
blank = "^0.1.0"


[tool.poetry.group.test.dependencies]
tox = "^3.27.1"
coverage = "^6.5.0"
pytest = "^7.2.0"

